# agent-ci

./: .dev.vars.example  .env.example  .env.machinen.example  .fallowrc.json  .gitignore  .oxlintrc.json  .prettierignore  .release-closes.json  .speccing_next_output_v2.json  .speccing_next_output_v3.json  .speccing_next_output_v4.json  .speccing_start_output_v2.json  .speccing_start_output_v3.json  .speccing_start_output_v4.json  1  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASING.md  TRANSCRIPT_RAG_SETUP.md  bake.ts  check_run.ts  config-dev.jsonc  debug_db_ids.ts  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr_description.md  query.sh  vite.config.mts  vitest.config.ts  vm.ts  worker-configuration.d.ts  wrangler.jsonc
crates/agent-ci/: Cargo.toml
crates/agent-ci-runtime/: Cargo.toml
crates/agent-ci-runtime/src/: docker.rs  dtu.rs  lib.rs  runner.rs  wave.rs  workspace.rs
crates/agent-ci-runtime/src/docker/: config.rs  runtime.rs  socket.rs  tests.rs
crates/agent-ci-runtime/src/dtu/: artifacts.rs  cache.rs  github.rs  http.rs  logs.rs  routes.rs  runner_api.rs  state.rs  tests.rs  util.rs
crates/agent-ci-runtime/src/macos_vm/: command.rs  host.rs  image.rs  runner_binary.rs  tests.rs
crates/agent-ci-runtime/src/runner/: pause.rs  plans.rs  (+4 more)
crates/agent-ci/fixtures/: README.md
crates/agent-ci/src/: clean.rs  cli.rs  distribution.rs  docker.rs  dtu.rs  env.rs  expr.rs  git_shim.sh  lib.rs  macos_vm.rs  main.rs  retry_abort.rs  run_command.rs  runner.rs  runner_image.rs  state.rs
(+1619 files in other folders)
