[workspace]
members = ["crates/agent-ci", "crates/agent-ci-core", "crates/agent-ci-runtime"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "FSL-1.1-MIT"
repository = "https://github.com/redwoodjs/agent-ci"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
