[package]
name = "agent-ci"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "agent-ci"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
globset = "0.4"
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
